--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,37 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link " aria-current="page" href="#">Home</a>
-          <a class="nav-link active" href="./upcomingevents.html">Umpcoming Events</a>
+          <a class="nav-link " aria-current="page" href="./home.html">Home</a>
+          <a class="nav-link " href="./upcomingevents.html">Umpcoming Events</a>
           <a class="nav-link" href="./pastevents.html">Past Events</a>
-          <a class="nav-link " href="./contact.html">Contact</a>
+          <a class="nav-link active" href="./contact.html">Contact</a>
           <a class="nav-link " href="./stats.html">Stats</a>
         </div>
       </div>
     </div>
   </nav>
+
+  <form>
+    <div class="mb-3 mx-5" >
+      <label for="exampleInputEmail1" class="form-label">Name</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      
+    </div>
+    <div class="mb-3 mx-5">
+      <label for="exampleInputPassword1" class="form-label">Email</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    <div class="form-floating mx-5">
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+        <label for="floatingTextarea2">Mensagge</label>
+      </div>   
+
+    <button type="submit" class="btn btn-primary mx-5 my-3">Submit</button>
+  </form>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+</body>
+<footer>
+
+</footer>
+</html>
