--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -19,7 +19,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link " aria-current="page" href="#">Home</a>
+          <a class="nav-link " aria-current="page" href="./home.html">Home</a>
           <a class="nav-link active" href="./upcomingevents.html">Umpcoming Events</a>
           <a class="nav-link" href="./pastevents.html">Past Events</a>
           <a class="nav-link " href="./contact.html">Contact</a>
@@ -87,9 +87,9 @@
 
     <div class="row">
       <div class="card mx-2" style="width: 18rem;">
-        <img src="./assets/Cinema.jpg" class="card-img-top" alt="...">
+        <img src="./assets/Costume_Party.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Cinema</h5>
+          <h5 class="card-title">Costume Party</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Ver más</a>
         </div>
@@ -106,18 +106,18 @@
       
 
       <div class="card mx-2" style="width: 18rem;">
-        <img src="./assets/Marathon.jpg" class="card-img-top" alt="...">
+        <img src="./assets/Museum_Tour.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Marathon</h5>
+          <h5 class="card-title">Museum Tour</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Ver más</a>
         </div>
       </div>
 
       <div class="card mx-2" style="width: 18rem;">
-        <img src="./assets/Music_Concert.jpg" class="card-img-top" alt="...">
+        <img src="./assets/Cinema.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Music Concert</h5>
+          <h5 class="card-title">Cinema</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Ver más</a>
         </div>
