--- a/details.html
+++ b/details.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="shortcut icon" href="./assets/Logo-AE.png" type="image/png" >
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/png" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Home</title>
+    <title>Home | Amazing Events</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="20%" height="20%"alt="">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link " aria-current="page" href="#">Home</a>
-          <a class="nav-link active" href="./upcomingevents.html">Umpcoming Events</a>
+        <div class="navbar-nav ms-auto ">
+          <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+          <a class="nav-link" href="./upcomingevents.html">Umpcoming Events</a>
           <a class="nav-link" href="./pastevents.html">Past Events</a>
           <a class="nav-link " href="./contact.html">Contact</a>
           <a class="nav-link " href="./stats.html">Stats</a>
@@ -28,3 +28,32 @@
       </div>
     </div>
   </nav>
+  
+    <script src="./data.js"></script>
+    <script src="./home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+</body>
+
+<footer>
+
+<div class="redes">
+
+  <div class="social">
+   <a href="www.instagram.com"><img src="./assets/instagram.png" width="30px" height="30px" alt="instagram">
+  </a> 
+   
+  </div  class="inline">
+  <div class="social">
+    <img src="./assets/facebook (1).png"  width="30px" height="30px"alt="facebook">
+  </div>
+  <div class="social">
+    <img src="./assets/whatsapp.png"  width="30px" height="30px"alt="whatsapp">
+  </div>
+
+</div>
+
+<div class="text">
+  <h3>Cohort</h3>
+</div>
+</footer>
+</html>
