--- a/home.html
+++ b/home.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/png" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Home</title>
+    <title>Home | Amazing Events</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="20%" height="20%"alt="">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="Logo-Amazing Events">
+      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -34,7 +34,7 @@
       <div class="l-icon">
       <i>&#5176;</i>
       </div>
-      <div class="banner-titulo">
+      <div class="banner-titulo px-5">
       <strong><h2>HOME</h2></strong>
       </div>
      <div class="l-icon">
@@ -51,17 +51,19 @@
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option2">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option3">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div><div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option4">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div><div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option5">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
 
@@ -69,7 +71,7 @@
    
     <form class="d-flex col-6 col-md-4 col-lg-4 col-xl-4 " role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit"><i>&#128269;</i></button>
+      <button class="btn " type="submit"><i>&#128269;</i></button>
    
   </div>
 </div>
