--- a/stats.html
+++ b/stats.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/png" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Home</title>
+    <title>Stats | Amazing Events</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="20%" height="20%"alt="">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,7 +33,7 @@
       <div class="l-icon">
         <a href="./contact.html"><i>&#5176;</i></a>
       </div>
-      <div class="banner-titulo">
+      <div class="banner-titulo px-5">
         <strong><h2>STATS</h2></strong>
       </div>
       <div class="l-icon">
