--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,14 @@
 <body>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="Logo-Amazing Events">
+      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto">
+        <div class="navbar-nav ms-auto ">
           <a class="nav-link " aria-current="page" href="./home.html">Home</a>
-          <a class="nav-link " href="./upcomingevents.html">Umpcoming Events</a>
+          <a class="nav-link" href="./upcomingevents.html">Umpcoming Events</a>
           <a class="nav-link" href="./pastevents.html">Past Events</a>
           <a class="nav-link active" href="./contact.html">Contact</a>
           <a class="nav-link " href="./stats.html">Stats</a>
@@ -30,19 +30,19 @@
   </nav>
   <header>
     <div class="banner">
+     
       <div class="l-icon">
-        <a href="./pastevents.html"><i>&#5176;</i></a>
+      <i>&#5176;</i>
       </div>
-      <div class="banner-titulo px-5 ">
-        <strong><h2>CONTACT</h2></strong>
+      <div class="banner-titulo px-5">
+      <h2><strong>CONTACT</strong></h2>
       </div>
-      <div class="l-icon">
-        <a href="./stats.html"><i>&#5171;</i></a>
+     <div class="l-icon">
+      <a href="./upcomingevents.html"><i>&#5171;</i></a>
       </div>
-  
     </div>
   </header>
-  <section>
+
     <div class="caja-form">
       <div class="form-contact">
           <form>
@@ -64,7 +64,7 @@
           </form>
         </div>  
     </div>
-  </section>  
+   
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
@@ -76,12 +76,12 @@
      <a href="www.instagram.com"><img src="./assets/instagram.png" width="30px" height="30px" alt="instagram">
     </a> 
      
-    </div  class="inline">
-    <div class="social">
-      <img src="./assets/facebook (1).png"  width="30px" height="30px"alt="facebook">
     </div>
     <div class="social">
-      <img src="./assets/whatsapp.png"  width="30px" height="30px"alt="whatsapp">
+      <img src="./assets/facebook (1).png"  width="30px" height="30px" alt="facebook">
+    </div>
+    <div class="social">
+      <img src="./assets/whatsapp.png"  width="30px" height="30px" alt="whatsapp">
     </div>
   
   </div>
