--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="Logo-Amazing Events">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="Logo-Amazing Events">
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +35,7 @@
       <i>&#5176;</i>
       </div>
       <div class="banner-titulo px-5">
-      <strong><h2>HOME</h2></strong>
+      <h2><strong>HOME</strong></h2>
       </div>
      <div class="l-icon">
       <a href="./upcomingevents.html"><i>&#5171;</i></a>
@@ -51,19 +51,19 @@
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option2">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option3">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option4">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option5">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
         <label class="form-check-label" for="inlineCheckbox1">Category</label>
       </div>
 
@@ -72,9 +72,9 @@
     <form class="d-flex col-6 col-md-4 col-lg-4 col-xl-4 " role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn " type="submit"><i>&#128269;</i></button>
+    </form>
    
   </div>
-</div>
 
 <div class="events row container " id="card" >
   
@@ -87,25 +87,23 @@
 </body>
 
 <footer>
+  <div class="redes">
+    <div class="social">
+    <a href="www.instagram.com"><img src="./assets/instagram.png" width="30px" height="30px" alt="instagram">
+    </a> 
+    
+    </div>
+    <div class="social">
+      <img src="./assets/facebook (1).png"  width="30px" height="30px" alt="facebook">
+    </div>
+    <div class="social">
+      <img src="./assets/whatsapp.png"  width="30px" height="30px" alt="whatsapp">
+    </div>
 
-<div class="redes">
-
-  <div class="social">
-   <a href="www.instagram.com"><img src="./assets/instagram.png" width="30px" height="30px" alt="instagram">
-  </a> 
-   
-  </div  class="inline">
-  <div class="social">
-    <img src="./assets/facebook (1).png"  width="30px" height="30px"alt="facebook">
   </div>
-  <div class="social">
-    <img src="./assets/whatsapp.png"  width="30px" height="30px"alt="whatsapp">
+
+  <div class="text">
+    <h3>Cohort</h3>
   </div>
-
-</div>
-
-<div class="text">
-  <h3>Cohort</h3>
-</div>
 </footer>
 </html>
