--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,7 +34,7 @@
         <a href="./contact.html"><i>&#5176;</i></a>
       </div>
       <div class="banner-titulo px-5">
-        <strong><h2>STATS</h2></strong>
+        <h2><strong>STATS</strong></h2>
       </div>
       <div class="l-icon">
         <a href=""><i>&#5171;</i></a>
@@ -172,12 +172,12 @@
      <a href="www.instagram.com"><img src="./assets/instagram.png" width="30px" height="30px" alt="instagram">
     </a> 
      
-    </div  class="inline">
-    <div class="social">
-      <img src="./assets/facebook (1).png"  width="30px" height="30px"alt="facebook">
     </div>
     <div class="social">
-      <img src="./assets/whatsapp.png"  width="30px" height="30px"alt="whatsapp">
+      <img src="./assets/facebook (1).png"  width="30px" height="30px" alt="facebook">
+    </div>
+    <div class="social">
+      <img src="./assets/whatsapp.png"  width="30px" height="30px" alt="whatsapp">
     </div>
   
   </div>
