--- a/home.html
+++ b/home.html
@@ -44,35 +44,23 @@
 
     </div>
   </header>
-  <div class="controles p-4">
-    <div class="checkboxes">
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-        <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-        <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-        <label class="form-check-label" for="inlineCheckbox1">Category</label>
-      </div>
+  <div class="controles p-4" >
+    
+    <div class="checkboxes" id="checkbox">
+      
+    </div>  
 
-    </div>
    
     <form class="d-flex col-6 col-md-4 col-lg-4 col-xl-4 " role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn " type="submit"><i>&#128269;</i></button>
     </form>
+
+    <div class="resultados">
+
+    </div>
+
+  </div>
    
   </div>
 
