Entrega Task3 para correccion

--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,12 @@
     </div>
   </header>
 
-    <div class="caja-form">
+    <div class="caja-section">
       <div class="form-contact">
           <form>
             <div class="mb-3 mx-5" >
               <label for="exampleInputEmail1" class="form-label">Name</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="">
               
             </div>
             <div class="mb-3 mx-5">
