--- a/details.html
+++ b/details.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <img src="./assets/Logo-AE.png" width="200em" height="60em"alt="">
+      <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,9 +28,16 @@
       </div>
     </div>
   </nav>
+
+  <div class="caja-section py-3">
+
+    <div class="card mb-3" style="max-width: 700px;" id="containerdetails">
+
+    </div>
+  </div>
   
     <script src="./data.js"></script>
-    <script src="./home.js"></script>
+    <script src="./details.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
@@ -42,12 +49,12 @@
    <a href="www.instagram.com"><img src="./assets/instagram.png" width="30px" height="30px" alt="instagram">
   </a> 
    
-  </div  class="inline">
-  <div class="social">
-    <img src="./assets/facebook (1).png"  width="30px" height="30px"alt="facebook">
   </div>
   <div class="social">
-    <img src="./assets/whatsapp.png"  width="30px" height="30px"alt="whatsapp">
+    <img src="./assets/facebook (1).png"  width="30px" height="30px" alt="facebook">
+  </div>
+  <div class="social">
+    <img src="./assets/whatsapp.png"  width="30px" height="30px" alt="whatsapp">
   </div>
 
 </div>
