--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
+    <div class="container-fluid" id="logohead">
       <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="Logo-Amazing Events">
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
@@ -31,16 +31,23 @@
   <header>
     <div class="banner">
      
-      <div class="l-icon">
-      <i>&#5176;</i>
+      <div class="flecha-previous" col-1>
+        <a href="./pastevents.html">
+          <img src="./assets/atras.png" width="20px"  alt="flecha-anterior">
+        </a>
       </div>
-      <div class="banner-titulo px-5">
-      <h2><strong>CONTACT</strong></h2>
+
+      <div class="banner-titulo col-10">
+        <h3><strong>CONTACT</strong></h3>
       </div>
-     <div class="l-icon">
-      <a href="./upcomingevents.html"><i>&#5171;</i></a>
+
+      <div class="flecha-previous" col-1>
+        <a href="./stats.html">
+          <img src="./assets/proximo.png" width="20px"  alt="flecha-anterior">
+        </a>
       </div>
-    </div>
+  
+
   </header>
 
     <div class="caja-section">
