--- a/details.html
+++ b/details.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg " >
+    <div class="container-fluid" id="logohead">
       <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
