--- a/stats.html
+++ b/stats.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
+    <div class="container-fluid" id="logohead">
       <img src="./assets/Logo-AE.png" width="200em" height="60em" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,14 +30,20 @@
   </nav>
   <header>
     <div class="banner">
-      <div class="l-icon">
-        <a href="./contact.html"><i>&#5176;</i></a>
+      <div class="flecha-previous" col-1>
+        <a href="./contact.html">
+          <img src="./assets/atras.png" width="20px"  alt="flecha-anterior">
+        </a>
       </div>
-      <div class="banner-titulo px-5">
-        <h2><strong>STATS</strong></h2>
+
+      <div class="banner-titulo col-10">
+        <h3><strong>STATS</strong></h3>
       </div>
-      <div class="l-icon">
-        <a href=""><i>&#5171;</i></a>
+
+      <div class="flecha-previous" col-1>
+        <a href="./stats.html">
+          <img src="./assets/proximo.png" width="20px"  alt="flecha-anterior">
+        </a>
       </div>
   
     </div>
